#00005396: Improved content module "tiles"

--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/tiles/css.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/tiles/css.tml
@@ -25,7 +25,9 @@
 				
 				"> a.title-link":{
 					color: "inherit",
-					text_decoration: "none"
+					text_decoration: "none",
+					display: "block",
+					overflow: "hidden"
 				},
 				
 				"&.border": {
