--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/image/css.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/image/css.tml
@@ -1,5 +1,7 @@
 <tml:include designdb="@afw" medium="jss" ref="toCSS" o_scope=".content-modules .module-cm_image">
 
+	overflow: "hidden",
+
 	img: {
 		max_width: "100%",
 		display: "block",
