--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/tiles/css.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/tiles/css.tml
@@ -23,12 +23,9 @@
 				background_position: "center",
 				background_size: "cover",
 				
-				"> a.title-link":{
-					color: "inherit",
-					text_decoration: "none",
-					display: "block",
-					overflow: "hidden"
-				},
+				color: "inherit",
+				text_decoration: "none",
+				overflow: "hidden",
 				
 				"&.border": {
 					border: "solid silver 1px",
