#00005396: removed overflow:hidden from cm_image - added it to tiles-css

--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/tiles/css.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/tiles/css.tml
@@ -26,6 +26,9 @@
 				color: "inherit",
 				text_decoration: "none",
 				overflow: "hidden",
+				".module-cm_image": {
+					overflow: "hidden"		// IE11 needs this.
+				},
 				
 				"&.border": {
 					border: "solid silver 1px",
