--- a/OpenWGA/plugins/cm-neo/design/tml/html/dialogs/settings/form-link.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/dialogs/settings/form-link.tml
@@ -54,6 +54,9 @@
 
 <tml:case condition="tmlform.VIRTUALLINKTYPE">
 	<tml:[form-field] o_label="Zielfenster" o_name="LINKTARGET" o_meta="true" o_placeholder="Optionaler Name eines neuen Fensters"/>
+	<tml:case condition="tmlform.VIRTUALLINKTYPE=='int' || tmlform.VIRTUALLINKTYPE=='exp'">
+		<tml:[form-field] o_label="Sprungmarke" o_name="LINKANCHOR" o_meta="true" o_placeholder="Optionaler Name einer Sprungmarke (Anker)"/>
+	</tml:case>
 </tml:case>
 
 <tml:case condition="!_link_inserted && tmlform.mode()=='edit'" context="{_CM_clipboard_context}" iscontextvalid="true">
