--- a/OpenWGA/plugins/cm-neo/design/tml/html/dialogs/content-modules/settings.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/dialogs/content-modules/settings.tml
@@ -24,7 +24,7 @@
 
 		if(config){
 			form.designdb.value = config.designdb;
-			form.settingstml.value = config.settingstml||"none";
+			form.settingstml.value = config.settingstml||"";
 			form.title.value=config.title;
 			form.module_id.value = config.id;
 		}
@@ -58,13 +58,9 @@
 		})
 	</script>
 
-	<tml:if condition="tmlform.settingstml=='none'">
+	<tml:if condition="tmlform.settingstml=='error'">
 	
 		<tml:then>
-			Dieses Modul besitzt keine Einstellungsmöglichkeiten.
-		</tml:then>
-	
-		<tml:elseif condition="tmlform.settingstml=='error'">
 			<div class="alert alert-danger">
 				<h4>Dieses Modul ist nicht (mehr) verfügbar.</h4>
 				<p>Bitte wenden Sie sich an Ihren Administrator oder löschen Sie dieses Modul.</p>
@@ -73,8 +69,7 @@
 				<i class="far fa-trash-alt"></i>
 				Modul löschen
 			</button>
-			
-		</tml:elseif>
+		</tml:then>
 	
 		<tml:elseif condition="tmlform.settingstml=='root'">
 			<div class="alert alert-info">
@@ -107,7 +102,7 @@
 	
 			<div>
 				<tml:range labellanguage="de">
-					<tml:include designdb="{_designdb}" ref="{_tml}" o_ns="{tmlform.mod_id}" tmlscope="{tmlform.mod_id}">
+					<tml:include designdb="{_designdb}" ref="{_tml}" o_ns="{tmlform.mod_id}" tmlscope="{tmlform.mod_id}" if="_tml">
 						<tml:option name="parent-scope" expression="tmlform.parent_mod_id"/>
 						<tml:option name="cm_dbkey" expression="context('main').meta('db', 'dbkey')"/>
 					</tml:include>
@@ -116,7 +111,10 @@
 						<div style="margin:10px">
 							<tml:input name="{WGA.scoped('module_css_classes', tmlform.mod_id)}" type="checkbox" optionsitem="_classes"/>
 						</div>
-					</tml:case>					
+					</tml:case>
+					<tml:case condition="!_classes.size() && !_tml">
+						Dieses Modul besitzt keine Einstellungsmöglichkeiten.
+					</tml:case>
 				</tml:range>
 			</div>
 		
