#00005418: added option js-version for javascript

--- a/OpenWGA/plugins/cm-modules/design/tml/html/htmlhead-includes.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/htmlhead-includes.tml
@@ -67,6 +67,7 @@
 		<tml:param name="contentkey" expression="KEY"/>
 		<tml:param name="jquery_plugins" expression="_plugins"/>
 		<tml:param name="modified" expression="MODIFIED"/>
+		<tml:param name="js_version" expression="option('js-version')||'none'"/>
 	</tml:url>"></script>	
 
 <tml:foreach type="itemvalue" item="_tmls" currentvalue="_tml">
