--- a/OpenWGA/plugins/admin/design/tml/html/tools/tmlscript-console.tml
+++ b/OpenWGA/plugins/admin/design/tml/html/tools/tmlscript-console.tml
@@ -22,71 +22,40 @@
 ## along with OpenWGA in file COPYING.
 ## If not, see <http://www.gnu.org/licenses/>.
 ## LICENSE END #################################################################
-<tml:action id="execute">
-	if (tmlform.type == 's') {
-		scriptToRun = tmlform.script;
-	}
-	else {
-		exprToRun = tmlform.script;
-	}
-	
-	_scrcontext = tmlform.db ? "db:"+ tmlform.db : "this"
-	if (tmlform.context) {
-		_scrcontext += "/"+tmlform.context;
-	}
-
-	tmlform.store();
-</tml:action>
 
 <tml:form id="tmlscript" source="portletsessionvars" htmlinput="ignore">		
 
-	<tml:case condition="(scriptToRun||exprToRun) && tmlform.run_as_master">
+	<tml:case condition="tmlform.script">
 		<tml:script>
-			if (tmlform.isEmpty('db')) {
-				db().reopenSession(null, null);
+			if(tmlform.run_as_master){
+				if (tmlform.isEmpty('db')) {
+					db().reopenSession(null, null);
+				}
+				else {
+					var targetDB = wgacore.getContentdbs().get(WGA.design().resolveDbKey(tmlform.db));
+					targetDB.openSession();
+				}
 			}
-			else {
-				var targetDB = wgacore.getContentdbs().get(WGA.design().resolveDbKey(tmlform.db));
-				targetDB.openSession();
+
+			var ctx = tmlform.db ? "db:"+ tmlform.db : "this"
+			if (tmlform.context) {
+				ctx += "/"+tmlform.context;
 			}
+			ctx = context(ctx, false);
+			 
+			if(ctx){
+				try{
+					if (tmlform.type=='s')
+						_result = WGA.TMLScript.runScript(ctx, tmlform.script)
+					else _result = WGA.TMLScript.runExpression(ctx, tmlform.script)
+				}
+				catch(e){
+					_result = "undefined";
+					_exception=e;
+				}
+			}
+			else _result = "Context not valid"
 		</tml:script>
-	</tml:case>
-
-	<tml:case isdefined="_scrcontext">
-	
-		<tml:if context="{_scrcontext}" iscontextvalid="true">
-			<tml:then>
-
-
-				<tml:case isdefined="scriptToRun">			
-					<tml:script var="_result">
-						try{
-							eval("function $f(){"+scriptToRun+"}")
-							return $f();
-						}
-						catch(e){
-							_exception=e;
-						}
-					</tml:script>
-				</tml:case>
-				
-				<tml:case isdefined="exprToRun">
-					<tml:script var="_result">
-						try{
-							return eval(exprToRun)
-						}
-						catch(e){
-							_exception=e;
-						}
-					</tml:script>
-				</tml:case>
-		
-			</tml:then>
-			
-			<tml:else>
-				<tml:script var="_result" expression="'Context not valid'"/>
-			</tml:else>
-		</tml:if>
 	</tml:case>
 
 	<tml:script>
@@ -108,7 +77,7 @@
 					icon: '<tml:url type="file" db="@afw" doc="icons" file="page_edit.png"/>',		                
 					text: "Execute",
 					handler: function(){
-						WGA.ajax.callAction("<tml:action ref="execute" portletmode="edit"/>","<tml:script expression="portlet.portletkey"/>");
+						WGA.ajax.callAction("<tml:action ref="$store"/>");
 					}
 				}
 			]
@@ -161,7 +130,6 @@
 							style="width:99%"
 						</tml:input>
 					</div>
-					<tml:comment><tml:include ref="system:convert-to-ext-field" o_fieldname="script" o_type="textarea"/></tml:comment>
 					<script>
 						$("#<tml:script expression="tmlform.formid"/> textarea[name=script]").tabhandler().autogrow()
 					</script>					
@@ -235,23 +203,27 @@
 						<tml:else>
 							<label>Result:</label>
 							<div class="data">						
-								<tml:item name="_result" divider="<br>" encode="html"/>
+								<tml:comment><tml:item name="_result" divider="<br>" encode="html"/></tml:comment>
+								<tml:script>
+									return _result && _result.toString ? _result.toString() : _result
+								</tml:script>
 							</div>
 							<div class="clear"></div>
 							
 							<label>Data type of result:</label>
 							<div class="data">
-								<tml:script>		
-									var res = itemList("_result");		
-									var firstElement = (res.size() >= 1 ? res.get(0) : null);		
-									var firstElementType = (firstElement == null ? "null" : javaObject(firstElement).getClass().getName());		
-											
-									if (res.size() > 1) {		
-										return "List with first element of type " + firstElementType;		
-									}		
-									else {		
-										return firstElementType;		
-									}		
+								<tml:script>
+									//console.log("_result", _result, typeof(_result));
+								
+									if(_result instanceof java.util.List){
+										if(_result.size()==0)
+											return "Empty List or Array"
+										var firstElement = _result.get(0);		
+										var firstElementType = (firstElement == null ? "null" : javaObject(firstElement).getClass().getName());		
+										return "List or Array with first element of type " + firstElementType;
+									}
+								
+									return _result === null ? "null" : javaObject(_result).getClass().getName();		
 								</tml:script>		
 							</div>
 							<div class="clear"></div>
