--- a/OpenWGA/plugins/cm-neo/design/tml/html/dialogs/publish-page.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/dialogs/publish-page.tml
@@ -1,31 +1,37 @@
 <tml:action id="publish">
 
-	var validfrom = tmlform.validfrom && WGA.createCalendar(WGA.dateOnly(tmlform.validfrom))
-	if(validfrom && tmlform.validfrom_time){
-		var time = WGA.createCalendar(tmlform.validfrom_time)
-		validfrom.set(validfrom.HOUR_OF_DAY, time.get(validfrom.HOUR_OF_DAY));
-		validfrom.set(validfrom.MINUTE, time.get(validfrom.MINUTE));
-	}
-	//console.log("validfrom", validfrom && validfrom.time);
-
-	var validto = tmlform.validto && WGA.createCalendar(WGA.dateOnly(tmlform.validto))
-	if(validto && tmlform.validto_time){
-		var time = WGA.createCalendar(tmlform.validto_time)
-		validto.set(validto.HOUR_OF_DAY, time.get(validto.HOUR_OF_DAY));
-		validto.set(validto.MINUTE, time.get(validto.MINUTE));
-	}
-	//console.log("validto", validto && validto.time);
+	try{
+		var validfrom = tmlform.validfrom && WGA.createCalendar(WGA.dateOnly(tmlform.validfrom))
+		if(validfrom && tmlform.validfrom_time){
+			var time = WGA.createCalendar(tmlform.validfrom_time)
+			validfrom.set(validfrom.HOUR_OF_DAY, time.get(validfrom.HOUR_OF_DAY));
+			validfrom.set(validfrom.MINUTE, time.get(validfrom.MINUTE));
+		}
+		//console.log("validfrom", validfrom && validfrom.time);
 	
-	content().setValidity(validfrom && validfrom.time, validto && validto.time);
-	content().publish(tmlform.comment, tmlform.reasonForReplacement)
-			
-	portlet.fireevent("close-dialog", {
-		redirectto: contenturl("html", null, true)
-	})
-
-	portlet.fireevent("struct-updated", App.getStructData(content()))
+		var validto = tmlform.validto && WGA.createCalendar(WGA.dateOnly(tmlform.validto))
+		if(validto && tmlform.validto_time){
+			var time = WGA.createCalendar(tmlform.validto_time)
+			validto.set(validto.HOUR_OF_DAY, time.get(validto.HOUR_OF_DAY));
+			validto.set(validto.MINUTE, time.get(validto.MINUTE));
+		}
+		//console.log("validto", validto && validto.time);
+		
+		content().setValidity(validfrom && validfrom.time, validto && validto.time);
+		content().publish(tmlform.comment, tmlform.reasonForReplacement)
+				
+		portlet.fireevent("close-dialog", {
+			redirectto: contenturl("html", null, true)
+		})
 	
-	_dialog_closed=true;
+		portlet.fireevent("struct-updated", App.getStructData(content()))
+		
+		_dialog_closed=true;
+	}
+	catch(e){
+		tmlform.addmessage(e.message)
+	}
+	
 </tml:action>
 
 <tml:form id="form-publish-page" unless="_dialog_closed">
