#00005437: Admin Client: run "Clear Data Cache" in master session

--- a/OpenWGA/plugins/admin/design/tml/html/webprojects/project/mode-view.tml
+++ b/OpenWGA/plugins/admin/design/tml/html/webprojects/project/mode-view.tml
@@ -85,6 +85,7 @@
 
 	var dbkey = DBM.getConfigBean().key;
 	var wgadb = db(dbkey);
+	wgadb.reopenSession();
 	
 	if(!tmlform || tmlform.fieldlist("caches").contains("data")){
 		log.info(dbkey + ": Data Cache cleared");
