#00005438: Improved RTF link editor for external links / anchor links

--- a/OpenWGA/plugins/cm-neo/design/tml/html/dialogs/edit-rtf-link.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/dialogs/edit-rtf-link.tml
@@ -47,7 +47,7 @@
 			</tml:case>
 			<tml:case value="exturl">
 				<tml:[form-field] o_label="URL" o_name="url" 
-					o_default="{$option_dialog_options.url}"
+					o_default="{$option_dialog_options.key || $option_dialog_options.url}"
 					o_placeholder="vollständige absolute URL ..."
 				/>
 			</tml:case>
