derivate: sort by displaywidth instead of size

--- a/OpenWGA/plugins/cm-neo/design/tml/html/dialogs/attachment-metas.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/dialogs/attachment-metas.tml
@@ -97,7 +97,7 @@
 				</tml:case>
 				<tml:case condition="_derivates.size()">
 					<p style="margin-top:20px">Poster Derivate:</p>
-	    			<tml:foreach item="_derivates" currentvalue="_derivate" sortexpression="_derivate.size" sortorder="descending">
+	    			<tml:foreach item="_derivates" currentvalue="_derivate" sortexpression="_derivate.displayWidth" sortorder="descending">
 	    				<tml:script>
 							_url = WGA.urlBuilder(fileurl(portlet.filename))
 										.setParameter("derivate", "id="+_derivate.id)
