--- a/OpenWGA/plugins/cm-neo/design/tml/html/content-changed-observer.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/content-changed-observer.tml
@@ -123,11 +123,13 @@
 	WGA.event.addListener("<tml:script expression="portlet.portletkey"/>", "clipboard-copy", function(ev){
 		WGA.ajax.action({
 			action: "<tml:action ajax="norefresh">
-				var path = "db:"+portlet.dbkey+"/docid:"+portlet.structkey;
-				setsessionvar("_CM_clipboard_context", path)
-				portlet.fireevent("clipboard-changed", {
-					path: path
-				})
+				var path = "db:"+portlet.dbkey+"/docid:"+portlet.contentkey;
+				if(context(path, false)){
+					setsessionvar("_CM_clipboard_context", path)
+					portlet.fireevent("clipboard-changed", {
+						title: WGA.encode("html", context(path).TITLE)
+					})
+				}
 			</tml:action>",
 			mode: "norefresh",
 			graydiv: false
